<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.AuthActivity">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20sp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="150sp"
            android:layout_height="150sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40sp"
            android:contentDescription="@null"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_to"
                android:textColor="?colorError"
                android:textSize="21sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="?colorError"
                android:textSize="21sp"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/skipBtn"
            android:layout_marginBottom="10sp"
            android:background="@drawable/button6"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:backgroundTint="?mc_track" />

        <TextView
            android:id="@+id/skipBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/button"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/register"
            android:textColor="?attr/colorError"
            android:textSize="14sp"
            android:textStyle="bold" />

    </RelativeLayout>

</FrameLayout>