<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.LoginActivity">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:importantForAccessibility="no"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />

    <ImageView
        android:id="@+id/backWhite"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:importantForAccessibility="no"
        android:src="@color/white"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/backBlack"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:importantForAccessibility="no"
        android:src="@color/black"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/toolbarRl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:gravity="center">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="150sp"
                android:layout_height="150sp"
                android:layout_centerHorizontal="true"
                android:importantForAccessibility="no"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logo"
                android:layout_marginTop="10sp"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="?colorError"
                android:textSize="21sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_margin="15sp"
            android:layout_weight="1.5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10sp"
                    android:drawablePadding="5sp"
                    android:gravity="center"
                    android:text="@string/email"
                    android:textColor="?colorError"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/ic_email_gray"
                    app:drawableTint="?colorError" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailTil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    app:hintEnabled="false">

                    <EditText
                        android:id="@+id/emailEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="emailAddress"
                        android:background="@drawable/button"
                        android:hint="@string/email_example"
                        android:inputType="textEmailAddress"
                        android:maxLength="50"
                        android:padding="15sp"
                        android:textColor="?colorError"
                        android:textColorHint="?colorError"
                        android:textSize="14sp"
                        android:textStyle="normal" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10sp"
                    android:drawablePadding="5sp"
                    android:gravity="center"
                    android:text="@string/password"
                    android:textColor="?colorError"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/ic_lock_gray"
                    app:drawableTint="?colorError" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordTil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="?colorError">

                    <EditText
                        android:id="@+id/passwordEt"
                        android:layout_width="match_parent"
                        android:layout_height="50sp"
                        android:autofillHints="password"
                        android:background="@drawable/button"
                        android:hint="@string/password_hint"
                        android:inputType="textPassword"
                        android:maxLength="20"
                        android:paddingHorizontal="20sp"
                        android:textColor="?colorError"
                        android:textColorHint="?colorError"
                        android:textSize="14sp"
                        android:textStyle="normal" />

                </com.google.android.material.textfield.TextInputLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingVertical="15sp">

                    <TextView
                        android:id="@+id/forget"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:background="@drawable/button6"
                        android:backgroundTint="@color/black"
                        android:gravity="center"
                        android:padding="10sp"
                        android:text="@string/forget_password"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/noAccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:background="@drawable/button6"
                        android:backgroundTint="?mc_track"
                        android:gravity="center"
                        android:padding="10sp"
                        android:text="@string/new_user_signup"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                </RelativeLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="0.5"
            android:gravity="center">

            <ImageButton
                android:id="@+id/loginBtn"
                android:layout_width="60sp"
                android:layout_height="60sp"
                android:layout_margin="20sp"
                android:background="@drawable/button2"
                android:contentDescription="@string/login"
                android:rotation="180"
                android:src="@drawable/ic_back_white" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>