<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@android:color/transparent"
    app:cardCornerRadius="@dimen/card_corner_radius_medium"
    app:cardUseCompatPadding="false"
    app:contentPadding="0dp"
    app:strokeWidth="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?mc_bg"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:padding="@dimen/spacing_15_sp"
            android:text="@string/do_you_want_to_exit"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_18"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:background="@color/white" />

        <LinearLayout
            android:id="@+id/no_yes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_5_sp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/spacing_8"
                app:strokeWidth="0dp">

                <TextView
                    android:id="@+id/no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="@dimen/spacing_8"
                    android:paddingBottom="@dimen/spacing_8"
                    android:text="@string/no"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_18"
                    android:textStyle="bold" />

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/yes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_5_sp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:paddingTop="@dimen/spacing_8"
                android:paddingBottom="@dimen/spacing_8"
                android:text="@string/yes"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_18"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>