<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="30dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true"
    app:strokeWidth="0dp"
    tool:ignore="all">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?mc_bg"
        android:orientation="vertical">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageView"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:focusableInTouchMode="true"
            android:scaleType="centerCrop"
            android:src="@drawable/logo"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.App.Circle" />

        <io.selimdawa.rippleeffect.MaterialRippleEffect
            style="@style/RippleStyleWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?colorOnBackground">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="?mc_track"
                android:textSize="24sp"
                android:textStyle="bold" />

        </io.selimdawa.rippleeffect.MaterialRippleEffect>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <io.selimdawa.rippleeffect.MaterialRippleEffect
                style="@style/RippleStyleWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?mc_bg">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingHorizontal="12dp"
                    android:paddingVertical="8dp"
                    android:text="@string/about_app"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </io.selimdawa.rippleeffect.MaterialRippleEffect>

        </androidx.core.widget.NestedScrollView>

        <io.selimdawa.rippleeffect.MaterialRippleEffect
            android:id="@+id/website"
            style="@style/RippleStyleWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?colorOnBackground">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingVertical="5sp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_web"
                    app:tint="?colorError" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:text="@string/website"
                    android:textColor="?mc_track"
                    android:textSize="21sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </io.selimdawa.rippleeffect.MaterialRippleEffect>

        <io.selimdawa.rippleeffect.MaterialRippleEffect
            android:id="@+id/facebook"
            style="@style/RippleStyleWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?colorOnBackground">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingVertical="5sp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@null"
                    android:src="@drawable/facebook_icon"
                    app:tint="?colorError" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:text="@string/facebook"
                    android:textColor="?mc_track"
                    android:textSize="21sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </io.selimdawa.rippleeffect.MaterialRippleEffect>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>